# flowiq

./: .gitignore  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  deploy-staging.yml
apps/ai-service/: .env.example  main.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
apps/ai-service/app/: config.py  main.py
apps/ai-service/app/routers/: health.py
apps/ai-service/tests/: test_health.py
apps/api/: .env.example  .eslintrc.cjs  package.json
apps/api/src/: config.ts  index.test.ts  index.ts
apps/api/src/plugins/: auth.ts
apps/api/src/routes/: health.ts
apps/web/: .env.example  next.config.mjs  next.config.ts  package.json  tsconfig.json
apps/web/src/app/: layout.tsx  page.test.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
infra/: README.md
infra/environments/staging/: main.tf  outputs.tf  terraform.tfvars  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/ecs/: main.tf  outputs.tf  variables.tf
infra/modules/iam/: main.tf  outputs.tf  variables.tf
infra/modules/rds/: main.tf  outputs.tf  variables.tf
infra/modules/redis/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf  variables.tf
infra/modules/vpc/: main.tf  outputs.tf  variables.tf
